--- a/css/main.scss
+++ b/css/main.scss
@@ -51,3 +51,10 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting"
 ;
+
+div{
+    border-style: solid;
+    width: 20px;
+    height: 20px;
+    background-color: aquamarine;
+}
